--- a/frontend/src/assets/scss/base.scss
+++ b/frontend/src/assets/scss/base.scss
@@ -5,7 +5,7 @@
 @theme {
   --color-black: #0C0C0C;
   --color-white: #ffffff;
-  --color-lightBlack : #161616;
+  --color-lightBlack: #161616;
   --font-outfit: "Outfit", sans-serif;
   --text-base: 16px;
 }
@@ -29,6 +29,30 @@
 
   h3 {
     @apply text-xl font-semibold;
+  }
+
+  button {
+    @apply cursor-pointer;
+  }
+
+  .btn {
+    @apply text-sm px-4 py-2 rounded-md transition cursor-pointer;
+  }
+  
+  .btn-primary {
+    @apply bg-white text-black hover:bg-gray-200;
+  }
+  
+  .btn-secondary {
+    @apply bg-lightBlack text-white border border-white/40 hover:bg-white hover:text-black;
+  }
+
+  .btn-danger {
+    @apply bg-red-600 text-white hover:bg-red-700;
+  }
+
+  input, .custum-input {
+    @apply w-full px-4 py-2 bg-lightBlack border border-white/50 rounded-md
   }
 
 }
