--- a/frontend/src/assets/scss/base.scss
+++ b/frontend/src/assets/scss/base.scss
@@ -51,7 +51,7 @@
     @apply bg-red-600 text-white hover:bg-red-700;
   }
 
-  input, .custum-input {
+  input, .custom-input {
     @apply w-full px-4 py-2 bg-lightBlack border border-white/50 rounded-md
   }
 
